HelloUltraviolet/Fixtures/RejectedSource/Procedures/ReturnAnnotationPresence/Source/Main.uv
//! Rejected procedure specimen for required explicit return annotation presence.

public procedure returnAnnotationPresenceReference() {
    return 1
}
